--- a/freeboard__frontend/package.json
+++ b/freeboard__frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.4",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
