--- a/class/package.json
+++ b/class/package.json
@@ -20,6 +20,7 @@
     "antd": "^4.16.6",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.21.1",
+    "dompurify": "^2.3.0",
     "firebase": "^8.8.0",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
@@ -29,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
     "react-player": "^2.9.0",
+    "react-quill": "^1.3.5",
     "yup": "^0.32.9"
   },
   "devDependencies": {
