--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -18,8 +18,8 @@
     "antd": "^4.16.6",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.21.1",
-    "dompurify": "^2.3.1",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "lodash": "^4.17.21",
     "next": "11.0.1",
     "react": "17.0.2",
@@ -36,7 +36,6 @@
     "@graphql-codegen/cli": "^1.21.7",
     "@graphql-codegen/typescript": "^1.23.0",
     "@types/apollo-upload-client": "^14.1.0",
-    "@types/dompurify": "^2.2.3",
     "@types/lodash": "^4.14.171",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
