--- a/class/package.json
+++ b/class/package.json
@@ -32,6 +32,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-login-by-naver": "^0.1.8",
     "react-player": "^2.9.0",
     "react-project": "^0.0.30",
     "react-quill": "^1.3.5",
