--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -7,6 +7,7 @@
     "build:ssg": "next build && next export",
     "build:ssr": "next build",
     "build:prod:ssg": "cp .env-prod .env && next build && next export",
+    "build:prod:ssr": "cp .env-prod .env && next build",
     "start": "next start",
     "lint": "next lint"
   },
